--- a/.prettierignore
+++ b/.prettierignore
@@ -1,17 +1,3 @@
-# Dependencies
-/node_modules
-package.json
-package-lock.json
-yarn.lock
-
-# Production
-/build
-
-# Generated files
-.docusaurus
-.cache-loader
-
-# Misc
-/static
-CNAME
-vercel.json
+# Ignore artifacts:
+build
+coverage
