--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OERTemplate",
+  "name": "CEP",
   "version": "0.0.0",
   "private": true,
   "license": "CC-BY-2.5",
@@ -13,7 +13,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "prettier": "prettier --write \"./**/*.{md,jsx,json,html,css,js,yml}\"",
+    "prettier": "prettier --write \"..{md,jsx,json,html,css,js,yml}\"",
     "prettier-check": "prettier --check \"./**/*.{md,jsx,json,html,css,js,yml}\"",
     "prepare": "husky install",
     "pre-commit": "pretty-quick --staged"
@@ -50,8 +50,8 @@
     "@docusaurus/module-type-aliases": "3.7",
     "@docusaurus/types": "3.7",
     "husky": "^9.1.7",
-    "prettier": "^3.5.3",
-    "pretty-quick": "^3.1.3"
+    "prettier": "3.5.3",
+    "pretty-quick": "^4.1.1"
   },
   "engines": {
     "node": ">=18.0"
